# cpp-library-template

./: .gitignore  CMakeLists.txt
.CMake-Boilerplate/: INSTALLER.cmake
executable/: CMakeLists.txt
executable/include/: main.hpp
executable/src/: main.cpp
scripts/: compile.sh  format.sh  get_dependencies.sh
